--- a/app/src/main/res/layout/activity_dang_ky_lich_lam.xml
+++ b/app/src/main/res/layout/activity_dang_ky_lich_lam.xml
@@ -36,9 +36,10 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp">
                 <EditText android:id="@+id/edtNgayLam"
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text"
+                    android:editable="false"
                     android:hint="Ngày làm" />
             </android.support.design.widget.TextInputLayout>
             <LinearLayout
