--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,11 @@
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="match_parent"-->
         <!--app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
-    <android.support.v4.view.ViewPager
-        android:layout_marginBottom="50dp"
+    <com.tangtuongco.chamcong.Ulty.NonSwipeableViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </android.support.v4.view.ViewPager>
+    </com.tangtuongco.chamcong.Ulty.NonSwipeableViewPager>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
