--- a/app/src/main/res/layout/fragment_ban_be.xml
+++ b/app/src/main/res/layout/fragment_ban_be.xml
@@ -72,9 +72,9 @@
 
 
     <android.support.v7.widget.RecyclerView
+        android:layout_marginBottom="50dp"
         android:id="@+id/listDanhSachBanBe"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
