17/01/2019 final edit done 100%

--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -38,6 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <EditText
+            android:inputType="number"
             android:id="@+id/edtMucLuong"
             android:hint="Mức lương"
             android:layout_width="match_parent"
@@ -48,6 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <EditText
+            android:inputType="number"
             android:id="@+id/edtSDT"
             android:hint="Số điện thoại"
             android:layout_width="match_parent"
