17/01/2019 final edit done 100%

--- a/app/src/main/res/layout/activity_sua_thong_tin_nhan_vien.xml
+++ b/app/src/main/res/layout/activity_sua_thong_tin_nhan_vien.xml
@@ -42,6 +42,7 @@
             android:layout_below="@+id/edtHoVaTenSua"
             android:layout_height="wrap_content" />
         <EditText
+            android:inputType="number"
             android:hint="Mức Lương"
             android:id="@+id/edtMucLuongSua"
             android:layout_width="match_parent"
